----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-11-21 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_move_copy.php: typo about constraints

2003-11-21 Michal Cihar  <nijel@users.sourceforge.net>
    * scripts/create-release.sh: Udated information what is needed to change on
      home page to currect status.

2003-11-20 Alexander M. Turek  <rabus@users.sourceforge.net>
    * server_databases.php, server_processlist.php, server_status.php,
      server_variables.php: Removed some php 3 / MySQL 3.21 compatibility code.
    * README: Updated requirements.
    * scripts/create-release.sh: Create Documentation.txt when building the
      distribution kits.
    * Documentation.txt, scripts/updatedocs.sh: Romoved.

2003-11-20 Michal Cihar  <nijel@users.sourceforge.net>
    * read_dump.php: Show message about failing upload in all cases, removed
      some PHP compatibility code.
    * libraries/export/sql.php: More older PHP cleanup.
    * tbl_move_copy.php, tbl_properties_operations.php, lang/*: Cleanup in
      table moving/copying and allow to keep constraints over these
      operations.
    * server_databases.php: Add correct parameters to left frame to keep
      server choice, language, etc. (bug #845397).
    * libraries/config_import.lib.php, config.inc.php, db_details.php,
      tbl_query_box.php, Documentation: Allow changing of default queries (RFE
      #839168).
    * Documentation.html: Valid XHTML again.
    * lang/indonesian: Updated, thanks to Rachim Tamsjadi (tamsy).

2003-11-20 Garvin Hicking <me@supergarv.de>
    * libraries/auth/*, libraries/dbg/*, libraries/export/*, libraries/fpdf/*,
      libraries/transformations/overview.php, libraries/*.php
      (work in progress)

      Lots of PHP < 4.1.0 / MySQL < 3.23.32 compatibility/performance changes:
      - Replaced "while (list() = each())" calls by foreach loops.
      - Removed PHP3-compatibility code