@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-11-22 Marc Delisle  <lem9@users.sourceforge.net>
+    * tbl_properties_operations.php: display "Add constraints" only
+      if there are foreign keys in current table
+
 2003-11-21 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_move_copy.php: typo about constraints
 
